[tool.poetry]
name = "simpledbpy"
version = "0.1.0"
description = ""
authors = ["y011d4 <yoiida333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
simpledbpy-client = "simpledbpy.client:main"
simpledbpy-server = "simpledbpy.server:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
